public/css/dash-style.css
/*
 * body
 ******************************/
 html,body{
 	height:100%;
 	background-image: url(../img/old_mathematics.png);
 }

 body{
 	padding-top:50px;
 	font-family: 'Open Sans',sans-serif;
 	overflow-x: hidden;
 }

h1,h2,h3,h4,h5,h6 {
	font-weight:300;
 	font-family: 'Open Sans',sans-serif;
}

h1 {
	font-weight:300;
	font-size:50px;
	text-align:center;
	line-height:55px;
	text-shadow:0 1px 1px rgba(0,0,0,0.8);
	margin-bottom:30px;
}

/*
 * Header
 ******************************/
 #navpane{
 	background-color: rgb(83,54,98);
 	-webkit-box-shadow: 0px 2px 2px #888;
    -moz-box-shadow:    0px 2px 2px #888;
    box-shadow:         0px 2px 2px #888;
    border-bottom-width: 0px;
 }

 .nav-container{
 	max-width: 1000px;
 }

  .navbar-default .navbar-nav>li>a{
	color:white;
 	opacity:0.7;
 }
 .navbar-default .navbar-nav>li>a:hover,
 .navbar-default .navbar-nav>li>a:focus,
 .navbar-default .navbar-nav>li.active>a:hover,
 .navbar-default .navbar-nav>li.active>a:focus,
 .navbar-default .navbar-nav>li.active>a{
	background-color:transparent;
	color:white;
 	opacity:1.0;
 }

 .navbar-brand{
 	padding:2.5px;
 }

 .icon{
 	background-image: url(../img/fragen-icon.png);
 	display:block;
 	background-repeat: no-repeat;
 	height:30px;
 	width:104px;
 	margin-top: 10px;
 }


/*
 * Content
 ******************************/
 #mod-panel,
 #side-bar{
	padding: 20px;
 }

 .live-tile{
 	margin:10px;
 }

 .live-tile:hover{
	-moz-box-shadow: 0 0 5px 2px #343434;
	-webkit-box-shadow: 0 0 5px 2px #343434;
	box-shadow: 0 0 5px 2px #343434;
 }

 #mod-code{
 	padding-left: 10px;
 }

 #mod-title{
 	padding-right: 10px;
 	text-align: right;
	margin-top: 40px;
	margin-left: 20px;
 }

 #side-bar{
 	margin-top:33px;
 	width:210px;
 	font-family:'raleway',sans-serif;
 }

 #user-photo{
 	width:170px;
 }

 #username{
 	text-align: center;
 	margin-top:10px;
 	border-bottom: 1px solid #888;
 	border-top: 1px solid #888;
 }

 #username-pic{
	height:30px;
	overflow: hidden;
	float: left;
	border: 1px solid rgb(54, 34, 65);
	margin-top: -2%;
	margin-right: 5px;
}

#username-pic img{
	width:30px;
}

 .nav-stacked>li>a{
 	border-radius: 0;
 }

 .nav-stacked li a{
 	color:rgb(34,111,140);
 }

 .nav-stacked li a:hover{
 	color:rgb(43, 97, 117);
 }

 .nav-stacked li.active a{
 	background-color: rgb(34,111,140);
 	color:white;
 }

 .nav-stacked li.active a:hover{
 	background-color: rgb(43, 97, 117);
 	color:white;
 }

/* Footer */
footer p.copyright {
    text-align:center;
    padding: 20px 0px 20px 0px;
}

